--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ jobs:
           at: workspace
       - run:
           name: Run
-          command: rm poetry.lock.sha256 && poetry run nox -- -s coverage -- combine
+          command: rm poetry.lock.sha256 && poetry run nox -- -s coverage -- combine && ls -al
   docs:
     executor: python-executor
     steps:
