--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ jobs:
           at: workspace
       - run:
           name: Run
-          command: rm poetry.lock.sha256 && poetry run nox -- -s coverage -- combine && ls -al
+          command: rm poetry.lock.sha256 && ls -al && poetry run nox -- -s coverage -- combine
   docs:
     executor: python-executor
     steps:
