--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,10 @@ jobs:
               test-cache
               -v<< pipeline.parameters.cache-version >>
               -{{ checksum "poetry.lock" }}
+            - >-
+              poetry-hash-cache
+              -v<< pipeline.parameters.cache-version >>
+              -{{ checksum "poetry.lock.sha256" }}
       - run:
           name: Run
           command: |
@@ -70,6 +74,13 @@ jobs:
             test-cache
             -v<< pipeline.parameters.cache-version >>
             -{{ checksum "poetry.lock" }}
+      - save_cache:
+          paths:
+            - << pipeline.parameters.poetry-hash-path >>
+          key: >-
+            poetry-hash-cache
+            -v<< pipeline.parameters.cache-version >>
+            -{{ checksum "poetry.lock.sha256" }}
   coverage:
     executor: python-executor
     steps:
