--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,8 +227,7 @@ jobs:
             -v<< pipeline.parameters.cache-version >>
             -{{ checksum "poetry.lock.sha256" }}
   typing:
-    docker:
-      - image: cimg/python:<< pipeline.parameters.image-tag >>
+    executor: python-executor
     parallelism: 4
     steps:
       - checkout
@@ -244,6 +243,13 @@ jobs:
               -{{ checksum "poetry.lock.sha256" }}
       - python/install-packages:
           pkg-manager: poetry
+      - run:
+          name: Run
+          command: |
+            set -e
+            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
+              circleci tests split --split-by=timings)
+            poetry run nox -- -s typeguard -- -v $TEST_FILES
       - save_cache:
           paths:
             - << pipeline.parameters.nox-envs-path >>
@@ -252,13 +258,6 @@ jobs:
             typing-cache
             -v<< pipeline.parameters.cache-version >>
             -{{ checksum "poetry.lock" }}
-      - run:
-          name: Run
-          command: |
-            set -e
-            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings)
-            poetry run nox -- -s typeguard -- -v $TEST_FILES
       - save_cache:
           paths:
             - << pipeline.parameters.poetry-hash-path >>
