--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,65 +6,65 @@ documentation = ""
 authors = ["Felipe Restrepo <maferelo@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "3.8.16"
-python-crontab = "^2.6.0"
-python-telegram-bot = "^13.12"
-fastapi = "^0.78.0"
-uvicorn = "^0.18.1"
-ormar = "^0.12.0"
-psycopg2-binary = "^2.9.3"
-asyncpg = "^0.25.0"
-alembic = "^1.8.1"
-python-decouple = "^3.6"
-numpy = "1.22.2"
-scikit-learn = "0.24.2"
-ipykernel = "^6.15.3"
-pandas = "1.3"
-typer = "^0.6.1"
-requests = "^2.28.1"
+aiofiles = "22.1.0"
+alembic = "1.9.0"
+asyncpg = "0.25.0"
 click = "8.1.3"
-desert = "^2022.9.22"
-marshmallow = "^3.19.0"
-python-dotenv = "^0.21.0"
-aiofiles = "^22.1.0"
-python-multipart = "^0.0.5"
-jinja2 = "^3.1.2"
-markdown = "^3.4.1"
-gunicorn = "^20.1.0"
-sqlalchemy = "^1.4.38"
-py = "^1.11.0"
+desert = "2022.9.22"
+fastapi = "0.78.0"
+gunicorn = "20.1.0"
+ipykernel = "6.19.4"
+jinja2 = "3.1.2"
+markdown = "3.4.1"
+marshmallow = "3.19.0"
+numpy = "1.22.2"
+ormar = "0.12.0"
+pandas = "1.3"
+psycopg2-binary = "2.9.5"
+py = "1.11.0"
+python = "3.8.16"
+python-crontab = "2.7.0"
+python-decouple = "3.6"
+python-dotenv = "0.21.0"
+python-multipart = "0.0.5"
+python-telegram-bot = "13.15"
+requests = "2.28.1"
+scikit-learn = "0.24.2"
+sqlalchemy = "1.4.41"
+typer = "0.6.1"
+uvicorn = "0.18.3"
 
 [tool.poetry.group.dev.dependencies]
-pylint = "^2.15.3"
-mypy = "^0.982"
-types-requests = "^2.28.11.2"
-pytest = "^7.1.3"
-black = "^22.10.0"
-pre-commit = "^2.20.0"
-coverage = {extras = ["toml"], version = "^6.5.0"}
-pytest-cov = "^4.0.0"
-nox = "^2022.8.7"
-pytest-mock = "^3.10.0"
-flake8 = "^5.0.4"
-flake8-bandit = "^4.1.1"
-flake8-black = "^0.3.3"
-flake8-bugbear = "^22.9.23"
-safety = "^2.3.1"
-pygments = "^2.13.0"
-typeguard = "^2.13.3"
-pyupgrade = "^3.2.0"
-isort = "^5.10.1"
-darglint = "^1.8.1"
-bandit = "^1.7.4"
-gitlint-core = "^0.17.0"
-yamllint = "^1.28.0"
-shellcheck-py = "^0.8.0.4"
-blacken-docs = "^1.12.1"
-flake8-docstrings = "^1.6.0"
-sphinx = "^5.3.0"
-sphinx-autodoc-typehints = "^1.19.5"
-xdoctest = "^1.1.0"
-pytest-xdist = "^3.1.0"
+bandit = "1.7.4"
+black = "22.12.0"
+blacken-docs = "1.12.1"
+coverage = {extras = ["toml"], version = "6.5.0"}
+darglint = "1.8.1"
+flake8 = "5.0.4"
+flake8-bandit = "4.1.1"
+flake8-black = "0.3.6"
+flake8-bugbear = "22.12.6"
+flake8-docstrings = "1.6.0"
+gitlint-core = "0.17.0"
+isort = "5.11.3"
+mypy = "0.982"
+nox = "2022.11.21"
+pre-commit = "2.20.0"
+pygments = "2.13.0"
+pylint = "2.15.9"
+pytest = "7.2.0"
+pytest-cov = "4.0.0"
+pytest-mock = "3.10.0"
+pytest-xdist = "3.1.0"
+pyupgrade = "3.3.1"
+safety = "2.3.5"
+shellcheck-py = "0.8.0.4"
+sphinx = "5.3.0"
+sphinx-autodoc-typehints = "1.19.5"
+typeguard = "2.13.3"
+types-requests = "2.28.11.5"
+xdoctest = "1.1.0"
+yamllint = "1.28.0"
 
 [tool.poetry.scripts]
 wiki = "src.app.console:main"
