--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,6 +276,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Copy .env
+          command: cp .env.example .env
+      - run:
           name: Build image
           command: docker compose build
       - run:
