--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ executors:
   python-executor:
     docker:
       - image: cimg/python:<< pipeline.parameters.image-tag >>
+  ubuntu-executor:
+    machine:
+      image: ubuntu-2204:2022.10.2
+      docker_layer_caching: true
 
 jobs:
   test:
@@ -267,6 +271,21 @@ jobs:
             typing-poetry-hash-cache
             -v<< pipeline.parameters.cache-version >>
             -{{ checksum "poetry.lock.sha256" }}
+  pre-commit:
+    executor: ubuntu-executor
+    steps:
+      - checkout
+      - run:
+          name: Copy .env
+          command: cp .env.example .env
+      - run:
+          name: Build image
+          command: docker compose build
+      - run:
+          name: Run
+          command: >-
+            docker compose run app bash -ic
+            "sudo chown -R vscode:vscode . && pre-commit run -a"
 
 workflows:
   upload-to-codecov:
@@ -289,5 +308,8 @@ workflows:
           context:
             - context
       - typing:
+          context:
+            - context
+      - pre-commit:
           context:
             - context
