--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -285,7 +285,7 @@ jobs:
           name: Run
           command: >-
             docker compose run app bash -ic
-            "ls -al && /home/vscode/.local/bin/poetry env list"
+            "pre-commit run -a"
 
 workflows:
   upload-to-codecov:
